// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsView right content panel info changes when left nav selected key changes 1`] = `
<TestView
  cardsViewData={
    {
      "cards": {
        "fail": [
          {
            "id": "test-fail-id",
          },
        ],
      },
    }
  }
  contentPageInfo={
    {
      "description": <React.Fragment>
        test 
        needs-review
         description
      </React.Fragment>,
      "resultsFilter": [Function],
      "title": "test-needs-review-title",
      "visualHelperSection": [Function],
    }
  }
  deps={
    {
      "contentPagesInfo": {
        "automated-checks": {
          "description": <React.Fragment>
            test 
            automated-checks
             description
          </React.Fragment>,
          "resultsFilter": [Function],
          "title": "test-automated-checks-title",
          "visualHelperSection": [Function],
        },
        "needs-review": {
          "description": <React.Fragment>
            test 
            needs-review
             description
          </React.Fragment>,
          "resultsFilter": [Function],
          "title": "test-needs-review-title",
          "visualHelperSection": [Function],
        },
      },
      "getCardSelectionViewData": [Function],
      "getCardsViewData": [Function],
      "getDateFromTimestamp": [Function],
      "isResultHighlightUnavailable": [Function],
      "leftNavActionCreator": [typemoq mock object],
      "scanActionCreator": [typemoq mock object],
      "screenshotViewModelProvider": [Function],
      "toolData": {
        "applicationProperties": {
          "name": "some app",
        },
      },
    }
  }
  scanMetadata={null}
  tabStopsEnabled={true}
  userConfigurationStoreData={
    {
      "isFirstTime": false,
    }
  }
/>
`;

exports[`ResultsView right content panel info renders with default/initial value 1`] = `
<TestView
  cardsViewData={
    {
      "cards": {
        "fail": [
          {
            "id": "test-fail-id",
          },
        ],
      },
    }
  }
  contentPageInfo={
    {
      "description": <React.Fragment>
        test 
        automated-checks
         description
      </React.Fragment>,
      "resultsFilter": [Function],
      "title": "test-automated-checks-title",
      "visualHelperSection": [Function],
    }
  }
  deps={
    {
      "contentPagesInfo": {
        "automated-checks": {
          "description": <React.Fragment>
            test 
            automated-checks
             description
          </React.Fragment>,
          "resultsFilter": [Function],
          "title": "test-automated-checks-title",
          "visualHelperSection": [Function],
        },
        "needs-review": {
          "description": <React.Fragment>
            test 
            needs-review
             description
          </React.Fragment>,
          "resultsFilter": [Function],
          "title": "test-needs-review-title",
          "visualHelperSection": [Function],
        },
      },
      "getCardSelectionViewData": [Function],
      "getCardsViewData": [Function],
      "getDateFromTimestamp": [Function],
      "isResultHighlightUnavailable": [Function],
      "leftNavActionCreator": [typemoq mock object],
      "scanActionCreator": [typemoq mock object],
      "screenshotViewModelProvider": [Function],
      "toolData": {
        "applicationProperties": {
          "name": "some app",
        },
      },
    }
  }
  scanMetadata={null}
  tabStopsEnabled={true}
  userConfigurationStoreData={
    {
      "isFirstTime": false,
    }
  }
/>
`;

exports[`ResultsView when status scan <Completed> 1`] = `
<div
  className="resultsView"
  data-automation-id="results-view"
>
  <TitleBar
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="test-automated-checks-title"
  />
  <div
    className="applicationView"
  >
    <LeftNav
      deps={
        {
          "contentPagesInfo": {
            "automated-checks": {
              "description": <React.Fragment>
                test 
                automated-checks
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-automated-checks-title",
              "visualHelperSection": [Function],
            },
            "needs-review": {
              "description": <React.Fragment>
                test 
                needs-review
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-needs-review-title",
              "visualHelperSection": [Function],
            },
          },
          "getCardSelectionViewData": [Function],
          "getCardsViewData": [Function],
          "getDateFromTimestamp": [Function],
          "isResultHighlightUnavailable": [Function],
          "leftNavActionCreator": [typemoq mock object],
          "scanActionCreator": [typemoq mock object],
          "screenshotViewModelProvider": [Function],
          "toolData": {
            "applicationProperties": {
              "name": "some app",
            },
          },
        }
      }
      isNavOpen={true}
      selectedKey="automated-checks"
      setSideNavOpen={[Function]}
    />
    <div
      className="resultsPanelContainer"
    >
      <ReflowCommandBar
        cardsViewData={
          {
            "cards": {
              "fail": [
                {
                  "id": "test-fail-id",
                },
              ],
            },
          }
        }
        currentContentPageInfo={
          {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          }
        }
        deps={
          {
            "contentPagesInfo": {
              "automated-checks": {
                "description": <React.Fragment>
                  test 
                  automated-checks
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-automated-checks-title",
                "visualHelperSection": [Function],
              },
              "needs-review": {
                "description": <React.Fragment>
                  test 
                  needs-review
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-needs-review-title",
                "visualHelperSection": [Function],
              },
            },
            "getCardSelectionViewData": [Function],
            "getCardsViewData": [Function],
            "getDateFromTimestamp": [Function],
            "isResultHighlightUnavailable": [Function],
            "leftNavActionCreator": [typemoq mock object],
            "scanActionCreator": [typemoq mock object],
            "screenshotViewModelProvider": [Function],
            "toolData": {
              "applicationProperties": {
                "name": "some app",
              },
            },
          }
        }
        isSideNavOpen={true}
        scanMetadata={
          {
            "deviceName": "TEST DEVICE",
            "targetAppInfo": {
              "name": "test-target-app-name",
            },
            "timespan": {
              "scanComplete": 1900-02-02T03:00:00.000Z,
            },
            "toolData": {
              "applicationProperties": {
                "name": "some app",
              },
            },
          }
        }
        scanStoreData={
          {
            "status": 2,
          }
        }
        setSideNavOpen={[Function]}
      />
      <div
        className="resultsPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <main>
            <TestView
              cardsViewData={
                {
                  "cards": {
                    "fail": [
                      {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              contentPageInfo={
                {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                }
              }
              deps={
                {
                  "contentPagesInfo": {
                    "automated-checks": {
                      "description": <React.Fragment>
                        test 
                        automated-checks
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-automated-checks-title",
                      "visualHelperSection": [Function],
                    },
                    "needs-review": {
                      "description": <React.Fragment>
                        test 
                        needs-review
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-needs-review-title",
                      "visualHelperSection": [Function],
                    },
                  },
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "getDateFromTimestamp": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "leftNavActionCreator": [typemoq mock object],
                  "scanActionCreator": [typemoq mock object],
                  "screenshotViewModelProvider": [Function],
                  "toolData": {
                    "applicationProperties": {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={
                {
                  "deviceName": "TEST DEVICE",
                  "targetAppInfo": {
                    "name": "test-target-app-name",
                  },
                  "timespan": {
                    "scanComplete": 1900-02-02T03:00:00.000Z,
                  },
                  "toolData": {
                    "applicationProperties": {
                      "name": "some app",
                    },
                  },
                }
              }
              scanStatus={2}
              tabStopsEnabled={true}
              userConfigurationStoreData={
                {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          deps={
            {
              "contentPagesInfo": {
                "automated-checks": {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                },
                "needs-review": {
                  "description": <React.Fragment>
                    test 
                    needs-review
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-needs-review-title",
                  "visualHelperSection": [Function],
                },
              },
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "getDateFromTimestamp": [Function],
              "isResultHighlightUnavailable": [Function],
              "leftNavActionCreator": [typemoq mock object],
              "scanActionCreator": [typemoq mock object],
              "screenshotViewModelProvider": [Function],
              "toolData": {
                "applicationProperties": {
                  "name": "some app",
                },
              },
            }
          }
          deviceId="some-id"
          viewModel={
            {
              "screenshotData": {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={{}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`ResultsView when status scan <Failed> 1`] = `
<div
  className="resultsView"
  data-automation-id="results-view"
>
  <TitleBar
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="test-automated-checks-title"
  />
  <div
    className="applicationView"
  >
    <LeftNav
      deps={
        {
          "contentPagesInfo": {
            "automated-checks": {
              "description": <React.Fragment>
                test 
                automated-checks
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-automated-checks-title",
              "visualHelperSection": [Function],
            },
            "needs-review": {
              "description": <React.Fragment>
                test 
                needs-review
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-needs-review-title",
              "visualHelperSection": [Function],
            },
          },
          "getCardSelectionViewData": [Function],
          "getCardsViewData": [Function],
          "getDateFromTimestamp": [Function],
          "isResultHighlightUnavailable": [Function],
          "leftNavActionCreator": [typemoq mock object],
          "scanActionCreator": [typemoq mock object],
          "screenshotViewModelProvider": [Function],
          "toolData": {
            "applicationProperties": {
              "name": "some app",
            },
          },
        }
      }
      isNavOpen={true}
      selectedKey="automated-checks"
      setSideNavOpen={[Function]}
    />
    <div
      className="resultsPanelContainer"
    >
      <ReflowCommandBar
        cardsViewData={
          {
            "cards": {
              "fail": [
                {
                  "id": "test-fail-id",
                },
              ],
            },
          }
        }
        currentContentPageInfo={
          {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          }
        }
        deps={
          {
            "contentPagesInfo": {
              "automated-checks": {
                "description": <React.Fragment>
                  test 
                  automated-checks
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-automated-checks-title",
                "visualHelperSection": [Function],
              },
              "needs-review": {
                "description": <React.Fragment>
                  test 
                  needs-review
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-needs-review-title",
                "visualHelperSection": [Function],
              },
            },
            "getCardSelectionViewData": [Function],
            "getCardsViewData": [Function],
            "getDateFromTimestamp": [Function],
            "isResultHighlightUnavailable": [Function],
            "leftNavActionCreator": [typemoq mock object],
            "scanActionCreator": [typemoq mock object],
            "screenshotViewModelProvider": [Function],
            "toolData": {
              "applicationProperties": {
                "name": "some app",
              },
            },
          }
        }
        isSideNavOpen={true}
        scanMetadata={null}
        scanStoreData={
          {
            "status": 3,
          }
        }
        setSideNavOpen={[Function]}
      />
      <div
        className="resultsPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <main>
            <TestView
              cardsViewData={
                {
                  "cards": {
                    "fail": [
                      {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              contentPageInfo={
                {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                }
              }
              deps={
                {
                  "contentPagesInfo": {
                    "automated-checks": {
                      "description": <React.Fragment>
                        test 
                        automated-checks
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-automated-checks-title",
                      "visualHelperSection": [Function],
                    },
                    "needs-review": {
                      "description": <React.Fragment>
                        test 
                        needs-review
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-needs-review-title",
                      "visualHelperSection": [Function],
                    },
                  },
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "getDateFromTimestamp": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "leftNavActionCreator": [typemoq mock object],
                  "scanActionCreator": [typemoq mock object],
                  "screenshotViewModelProvider": [Function],
                  "toolData": {
                    "applicationProperties": {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={null}
              scanStatus={3}
              tabStopsEnabled={true}
              userConfigurationStoreData={
                {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          deps={
            {
              "contentPagesInfo": {
                "automated-checks": {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                },
                "needs-review": {
                  "description": <React.Fragment>
                    test 
                    needs-review
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-needs-review-title",
                  "visualHelperSection": [Function],
                },
              },
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "getDateFromTimestamp": [Function],
              "isResultHighlightUnavailable": [Function],
              "leftNavActionCreator": [typemoq mock object],
              "scanActionCreator": [typemoq mock object],
              "screenshotViewModelProvider": [Function],
              "toolData": {
                "applicationProperties": {
                  "name": "some app",
                },
              },
            }
          }
          deviceId="some-id"
          viewModel={
            {
              "screenshotData": {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
        <DeviceDisconnectedPopup
          onRedetectDevice={[Function]}
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={{}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`ResultsView when status scan <Scanning> 1`] = `
<div
  className="resultsView"
  data-automation-id="results-view"
>
  <TitleBar
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="test-automated-checks-title"
  />
  <div
    className="applicationView"
  >
    <LeftNav
      deps={
        {
          "contentPagesInfo": {
            "automated-checks": {
              "description": <React.Fragment>
                test 
                automated-checks
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-automated-checks-title",
              "visualHelperSection": [Function],
            },
            "needs-review": {
              "description": <React.Fragment>
                test 
                needs-review
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-needs-review-title",
              "visualHelperSection": [Function],
            },
          },
          "getCardSelectionViewData": [Function],
          "getCardsViewData": [Function],
          "getDateFromTimestamp": [Function],
          "isResultHighlightUnavailable": [Function],
          "leftNavActionCreator": [typemoq mock object],
          "scanActionCreator": [typemoq mock object],
          "screenshotViewModelProvider": [Function],
          "toolData": {
            "applicationProperties": {
              "name": "some app",
            },
          },
        }
      }
      isNavOpen={true}
      selectedKey="automated-checks"
      setSideNavOpen={[Function]}
    />
    <div
      className="resultsPanelContainer"
    >
      <ReflowCommandBar
        cardsViewData={
          {
            "cards": {
              "fail": [
                {
                  "id": "test-fail-id",
                },
              ],
            },
          }
        }
        currentContentPageInfo={
          {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          }
        }
        deps={
          {
            "contentPagesInfo": {
              "automated-checks": {
                "description": <React.Fragment>
                  test 
                  automated-checks
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-automated-checks-title",
                "visualHelperSection": [Function],
              },
              "needs-review": {
                "description": <React.Fragment>
                  test 
                  needs-review
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-needs-review-title",
                "visualHelperSection": [Function],
              },
            },
            "getCardSelectionViewData": [Function],
            "getCardsViewData": [Function],
            "getDateFromTimestamp": [Function],
            "isResultHighlightUnavailable": [Function],
            "leftNavActionCreator": [typemoq mock object],
            "scanActionCreator": [typemoq mock object],
            "screenshotViewModelProvider": [Function],
            "toolData": {
              "applicationProperties": {
                "name": "some app",
              },
            },
          }
        }
        isSideNavOpen={true}
        scanMetadata={null}
        scanStoreData={
          {
            "status": 1,
          }
        }
        setSideNavOpen={[Function]}
      />
      <div
        className="resultsPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <main>
            <TestView
              cardsViewData={
                {
                  "cards": {
                    "fail": [
                      {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              contentPageInfo={
                {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                }
              }
              deps={
                {
                  "contentPagesInfo": {
                    "automated-checks": {
                      "description": <React.Fragment>
                        test 
                        automated-checks
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-automated-checks-title",
                      "visualHelperSection": [Function],
                    },
                    "needs-review": {
                      "description": <React.Fragment>
                        test 
                        needs-review
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-needs-review-title",
                      "visualHelperSection": [Function],
                    },
                  },
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "getDateFromTimestamp": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "leftNavActionCreator": [typemoq mock object],
                  "scanActionCreator": [typemoq mock object],
                  "screenshotViewModelProvider": [Function],
                  "toolData": {
                    "applicationProperties": {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={null}
              scanStatus={1}
              tabStopsEnabled={true}
              userConfigurationStoreData={
                {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          deps={
            {
              "contentPagesInfo": {
                "automated-checks": {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                },
                "needs-review": {
                  "description": <React.Fragment>
                    test 
                    needs-review
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-needs-review-title",
                  "visualHelperSection": [Function],
                },
              },
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "getDateFromTimestamp": [Function],
              "isResultHighlightUnavailable": [Function],
              "leftNavActionCreator": [typemoq mock object],
              "scanActionCreator": [typemoq mock object],
              "screenshotViewModelProvider": [Function],
              "toolData": {
                "applicationProperties": {
                  "name": "some app",
                },
              },
            }
          }
          deviceId="some-id"
          viewModel={
            {
              "screenshotData": {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={{}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`ResultsView when status scan <undefined> 1`] = `
<div
  className="resultsView"
  data-automation-id="results-view"
>
  <TitleBar
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="test-automated-checks-title"
  />
  <div
    className="applicationView"
  >
    <LeftNav
      deps={
        {
          "contentPagesInfo": {
            "automated-checks": {
              "description": <React.Fragment>
                test 
                automated-checks
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-automated-checks-title",
              "visualHelperSection": [Function],
            },
            "needs-review": {
              "description": <React.Fragment>
                test 
                needs-review
                 description
              </React.Fragment>,
              "resultsFilter": [Function],
              "title": "test-needs-review-title",
              "visualHelperSection": [Function],
            },
          },
          "getCardSelectionViewData": [Function],
          "getCardsViewData": [Function],
          "getDateFromTimestamp": [Function],
          "isResultHighlightUnavailable": [Function],
          "leftNavActionCreator": [typemoq mock object],
          "scanActionCreator": [typemoq mock object],
          "screenshotViewModelProvider": [Function],
          "toolData": {
            "applicationProperties": {
              "name": "some app",
            },
          },
        }
      }
      isNavOpen={true}
      selectedKey="automated-checks"
      setSideNavOpen={[Function]}
    />
    <div
      className="resultsPanelContainer"
    >
      <ReflowCommandBar
        cardsViewData={
          {
            "cards": {
              "fail": [
                {
                  "id": "test-fail-id",
                },
              ],
            },
          }
        }
        currentContentPageInfo={
          {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          }
        }
        deps={
          {
            "contentPagesInfo": {
              "automated-checks": {
                "description": <React.Fragment>
                  test 
                  automated-checks
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-automated-checks-title",
                "visualHelperSection": [Function],
              },
              "needs-review": {
                "description": <React.Fragment>
                  test 
                  needs-review
                   description
                </React.Fragment>,
                "resultsFilter": [Function],
                "title": "test-needs-review-title",
                "visualHelperSection": [Function],
              },
            },
            "getCardSelectionViewData": [Function],
            "getCardsViewData": [Function],
            "getDateFromTimestamp": [Function],
            "isResultHighlightUnavailable": [Function],
            "leftNavActionCreator": [typemoq mock object],
            "scanActionCreator": [typemoq mock object],
            "screenshotViewModelProvider": [Function],
            "toolData": {
              "applicationProperties": {
                "name": "some app",
              },
            },
          }
        }
        isSideNavOpen={true}
        scanMetadata={null}
        scanStoreData={
          {
            "status": undefined,
          }
        }
        setSideNavOpen={[Function]}
      />
      <div
        className="resultsPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <main>
            <TestView
              cardsViewData={
                {
                  "cards": {
                    "fail": [
                      {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              contentPageInfo={
                {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                }
              }
              deps={
                {
                  "contentPagesInfo": {
                    "automated-checks": {
                      "description": <React.Fragment>
                        test 
                        automated-checks
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-automated-checks-title",
                      "visualHelperSection": [Function],
                    },
                    "needs-review": {
                      "description": <React.Fragment>
                        test 
                        needs-review
                         description
                      </React.Fragment>,
                      "resultsFilter": [Function],
                      "title": "test-needs-review-title",
                      "visualHelperSection": [Function],
                    },
                  },
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "getDateFromTimestamp": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "leftNavActionCreator": [typemoq mock object],
                  "scanActionCreator": [typemoq mock object],
                  "screenshotViewModelProvider": [Function],
                  "toolData": {
                    "applicationProperties": {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={null}
              tabStopsEnabled={true}
              userConfigurationStoreData={
                {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          deps={
            {
              "contentPagesInfo": {
                "automated-checks": {
                  "description": <React.Fragment>
                    test 
                    automated-checks
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-automated-checks-title",
                  "visualHelperSection": [Function],
                },
                "needs-review": {
                  "description": <React.Fragment>
                    test 
                    needs-review
                     description
                  </React.Fragment>,
                  "resultsFilter": [Function],
                  "title": "test-needs-review-title",
                  "visualHelperSection": [Function],
                },
              },
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "getDateFromTimestamp": [Function],
              "isResultHighlightUnavailable": [Function],
              "leftNavActionCreator": [typemoq mock object],
              "scanActionCreator": [typemoq mock object],
              "screenshotViewModelProvider": [Function],
              "toolData": {
                "applicationProperties": {
                  "name": "some app",
                },
              },
            }
          }
          deviceId="some-id"
          viewModel={
            {
              "screenshotData": {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      {
        "contentPagesInfo": {
          "automated-checks": {
            "description": <React.Fragment>
              test 
              automated-checks
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-automated-checks-title",
            "visualHelperSection": [Function],
          },
          "needs-review": {
            "description": <React.Fragment>
              test 
              needs-review
               description
            </React.Fragment>,
            "resultsFilter": [Function],
            "title": "test-needs-review-title",
            "visualHelperSection": [Function],
          },
        },
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "getDateFromTimestamp": [Function],
        "isResultHighlightUnavailable": [Function],
        "leftNavActionCreator": [typemoq mock object],
        "scanActionCreator": [typemoq mock object],
        "screenshotViewModelProvider": [Function],
        "toolData": {
          "applicationProperties": {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={{}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      {
        "isFirstTime": false,
      }
    }
  />
</div>
`;
